update line chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<body></body>>
-<router-outlet></router-outlet>
+<body>
+        <button class="update" (click)="update()">
+            Add New Set of Data
+        </button>
+    
+        <div class="plot"></div>
+    </body>
