unused code removed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <body>
-        <button class="update" (click)="update()">
+        <!-- <button class="update" (click)="update()">
             Add New Set of Data
-        </button>
+        </button> -->
     
         <div class="plot"></div>
     </body>
